# QFaceDetect

./: CMakeLists.txt  README.md  camerawidget.cpp  camerawidget.h  facedetector.cpp  facedetector.h  main.cpp  streamer.cpp  streamer.h  videosurface.cpp  videosurface.h  videowidget.cpp  videowidget.h
